--- a/index.html
+++ b/index.html
@@ -15,9 +15,16 @@
         <input type="text" id="player1" name="Enter name">
         <label for="player2">Player2:</label>
         <input type="text" id="player2" name="Enter name">
+        <button id="startButton">Start Game</button>
     </div>
     <div class="board" id="board"></div>
+    <div class="winning-message" id="winningMessage">
+        <div data-winning-message-text></div>
+        <button id="restartButton">Restart</button>
+    </div>
+
+    <script src="./script.js"></script>
 </body>
-<script src="./script.js"></script>
+
 
 </html>
